--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,8 +1,8 @@
 .header{
-    background-image: url(/assets/img/post-image.jpg);
+    background-image: url("../img/post-image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 150vh;
+    height: 100vh;
     .header__container{
         @include flex-container;
         .header__title{
