--- a/assets/scss/layout/_article.scss
+++ b/assets/scss/layout/_article.scss
@@ -16,6 +16,7 @@
             padding: 10px 10px;
             background-color: $nickel;
             transition: 500ms ease;
+            text-decoration: none;
             &:hover{
                 background-color: $raisin-black;
             }
