--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -19,9 +19,9 @@ $roboto: 'Roboto', sans-serif;
 
 // Typography
 // Font Weight
-$light-weight: 300;
-$regular-weight: 400;
-$black-weight: 900;
+$weight-light: 300;
+$weight-regular: 400;
+$weight-black: 900;
 
 // Typography
 // Font Sizes
