--- a/assets/scss/componentes/_buttons.scss
+++ b/assets/scss/componentes/_buttons.scss
@@ -1,21 +1,38 @@
-.pagination{
-    .pagination__container{
-        .btn{
+.pagination {
+    .pagination__container {
+        .btn {
             border: solid $light-gray thin;
             background-color: white;
             transition: 500ms ease;
-            &:hover{
-                background-color: $eerie-black;
+
+            &:hover {
+                background-color: $nickel;
             }
         }
-        .btn.btn--left{
+
+        .btn.btn--left {
             border-bottom-left-radius: 20px;
             border-top-left-radius: 20px;
         }
-        .btn.btn--right{
+
+        .btn.btn--right {
             border-bottom-right-radius: 20px;
             border-top-right-radius: 20px;
         }
     }
+}
 
+.article {
+    .btn-sm {
+        border: solid $raisin-black thin;
+        border-radius: 20px;
+        padding: 10px 20px;
+        background-color: $nickel;
+        transition: 500ms ease;
+        text-decoration: none;
+
+        &:hover {
+            background-color: $raisin-black;
+        }
     }
+}
