--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    background-color: $eerie-black;
+    background-color: $raisin-black;
     height: 200px;
     .footer__container{
         @include flex-container;
