--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -10,7 +10,7 @@
     .header__title {
       color: $white;
       font-style: italic;
-      font-weight: $black-weight;
+      font-weight: $weight-black;
       text-align: center;
     }
 
