--- a/assets/scss/layout/_pagination.scss
+++ b/assets/scss/layout/_pagination.scss
@@ -1,6 +1,6 @@
 .pagination{
     height: 150px;
-    background-color: $light-gray;
+    background-color: $platinum;
     .pagination__container{
         @include flex-container;
     }
