--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10830,23 +10830,16 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 .article .article__container .article__date {
   font-weight: 400;
-  font-size: 25px;
+  font-size: 18px;
 }
 .article .article__container .article__paragraph {
   line-height: 45px;
   margin: 40px 0;
   font-size: 16px;
 }
-.article .article__container .btn-sm, .article .article__container .btn-group-sm > .btn {
-  border: solid #222323 thin;
-  border-radius: 20px;
-  padding: 10px 10px;
-  background-color: #6c6e70;
-  transition: 500ms ease;
-  text-decoration: none;
-}
-.article .article__container .btn-sm:hover, .article .article__container .btn-group-sm > .btn:hover {
-  background-color: #222323;
+.article .article__container .article__horizontal-rule {
+  color: #6c6e70;
+  height: 2px;
 }
 
 .section .section__container .section__name {
@@ -10872,9 +10865,19 @@ h1, .h1, h2, .h2, h3, .h3 {
   line-height: 30px;
 }
 
+@media screen and (min-width: 601px) {
+  .section__img.section__img--resize {
+    height: 142px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .section__img.section__img--resize {
+    height: 131px;
+  }
+}
 .pagination {
   height: 150px;
-  background-color: #d1d1d1;
+  background-color: #e6e7e7;
 }
 .pagination .pagination__container {
   display: flex;
@@ -10885,7 +10888,7 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 .footer {
-  background-color: #121619;
+  background-color: #222323;
   height: 200px;
 }
 .footer .footer__container {
@@ -10905,7 +10908,7 @@ h1, .h1, h2, .h2, h3, .h3 {
   transition: 500ms ease;
 }
 .pagination .pagination__container .btn:hover {
-  background-color: #121619;
+  background-color: #6c6e70;
 }
 .pagination .pagination__container .btn.btn--left {
   border-bottom-left-radius: 20px;
@@ -10914,6 +10917,18 @@ h1, .h1, h2, .h2, h3, .h3 {
 .pagination .pagination__container .btn.btn--right {
   border-bottom-right-radius: 20px;
   border-top-right-radius: 20px;
+}
+
+.article .btn-sm, .article .btn-group-sm > .btn {
+  border: solid #222323 thin;
+  border-radius: 20px;
+  padding: 10px 20px;
+  background-color: #6c6e70;
+  transition: 500ms ease;
+  text-decoration: none;
+}
+.article .btn-sm:hover, .article .btn-group-sm > .btn:hover {
+  background-color: #222323;
 }
 
 /*# sourceMappingURL=main.css.map */
