--- a/assets/scss/componentes/_buttons.scss
+++ b/assets/scss/componentes/_buttons.scss
@@ -9,12 +9,12 @@
                 background-color: $nickel;
             }
         }
-
+        // transform the button-group to a pill
         .btn.btn--left {
             border-bottom-left-radius: 20px;
             border-top-left-radius: 20px;
         }
-
+        // transform the button-group to a pill
         .btn.btn--right {
             border-bottom-right-radius: 20px;
             border-top-right-radius: 20px;
