--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -34,6 +34,7 @@
   }
 }
 
+// resizes de title depending on the device
 @media screen and (min-width: 601px) {
   .header__title.header__title--resize {
     font-size: $xx-large;
